--- a/example/index.html
+++ b/example/index.html
@@ -156,10 +156,13 @@
                 //testPurchaseButton.onclick = function() { fortumo.purchaseProduct(app.purchaseSuccess, app.purchaseFail, "android.test.purchased"); }
                 //testConsumeButton.onclick = function() { fortumo.consume(app.consumeSuccess, app.consumeFail, "android.test.purchased"); }
 
-                // Map all SKUs
-                fortumo.setProduct(app.mapSkuSuccess, app.mapSkuFail, "test", {
-                    "asd" : "asd2",
-                    "asd" : "asd2"
+                // Map all prodctos
+                fortumo.setProduct(app.mapSkuSuccess, app.mapSkuFail, "serviceId", {
+                    "name" : "product name",
+                    "type" : "TYPE_CONSUMABLE",
+                    "display" : "asi me veo",
+                    "price" : "4.99",
+                    "currency" : "USD",
                 });
  
                 // Enable init
