fortumo sms plugin

--- a/example/index.html
+++ b/example/index.html
@@ -157,7 +157,9 @@
                 //testConsumeButton.onclick = function() { fortumo.consume(app.consumeSuccess, app.consumeFail, "android.test.purchased"); }
 
                 // Map all prodctos
-                fortumo.setProduct(app.mapSkuSuccess, app.mapSkuFail, "serviceId", {
+                fortumo.setProduct(app.mapSkuSuccess, app.mapSkuFail, "a3e92d08f7fa470725d88425db904441", {
+                    "appSecret": "773d2f4e7af846972ba9192043366249",
+                    "secret": "3431f60f7a1b34bdfe65164ed143b9fc",
                     "name" : "product name",
                     "type" : "TYPE_CONSUMABLE",
                     "display" : "asi me veo",
